[package]
name = "axum-msgpack"
version = "0.4.0"
edition = "2021"
description = "serialize/derserialize msgpack for axum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
rmp-serde = { version = "1.3", optional = true }
msgpacker = { version = "0.4",  features = ["alloc", "msgpacker-derive", "std"], optional = true }
hyper = "1.1"
mime = "0.3"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.3" }

[features]
default = ["rmp_serde"]
rmp_serde = ["dep:serde", "dep:rmp-serde"]
msgpacker = ["dep:msgpacker"]